# SWE30011-EdgeServer

./: .gitignore  CMakeLists.txt  README.md  bin  tmux-compile.lua
include/: Config.h  Database.h  Debug.h  Link.h  Process.h  Server.h  Structures.h
src/: CMakeLists.txt  Database.c  Link.c  Process.c  Server.c  main.c
